[gd_scene load_steps=3 format=2]

[ext_resource path="res://DigParticles.gd" type="Script" id=2]

[sub_resource type="Gradient" id=7]
offsets = PoolRealArray( 0, 0.583333, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0 )

[node name="DigParticles" type="Node2D"]
script = ExtResource( 2 )

[node name="TopLeftP" type="CPUParticles2D" parent="."]
position = Vector2( -16, -16 )
z_index = 2
emitting = false
amount = 1
one_shot = true
explosiveness = 1.0
randomness = 0.8
emission_shape = 2
emission_rect_extents = Vector2( 48, 48 )
direction = Vector2( 0, -1 )
spread = 15.0
gravity = Vector2( 0, 960 )
initial_velocity = 50.0
initial_velocity_random = 1.0
angular_velocity = 32.0
angular_velocity_random = 1.0
color_ramp = SubResource( 7 )

[node name="TopRightP" type="CPUParticles2D" parent="."]
position = Vector2( -16, -16 )
z_index = 2
emitting = false
amount = 1
one_shot = true
explosiveness = 1.0
randomness = 0.8
emission_shape = 2
emission_rect_extents = Vector2( 48, 48 )
direction = Vector2( 0, -1 )
spread = 15.0
gravity = Vector2( 0, 960 )
initial_velocity = 50.0
initial_velocity_random = 1.0
angular_velocity = 32.0
angular_velocity_random = 1.0
color_ramp = SubResource( 7 )

[node name="BottomLeftP" type="CPUParticles2D" parent="."]
position = Vector2( -16, -16 )
z_index = 2
emitting = false
amount = 1
one_shot = true
explosiveness = 1.0
randomness = 0.8
emission_shape = 2
emission_rect_extents = Vector2( 48, 48 )
direction = Vector2( 0, -1 )
spread = 15.0
gravity = Vector2( 0, 960 )
initial_velocity = 50.0
initial_velocity_random = 1.0
angular_velocity = 32.0
angular_velocity_random = 1.0
color_ramp = SubResource( 7 )

[node name="BottomRightP" type="CPUParticles2D" parent="."]
position = Vector2( -16, -16 )
z_index = 2
emitting = false
amount = 1
one_shot = true
explosiveness = 1.0
randomness = 0.8
emission_shape = 2
emission_rect_extents = Vector2( 48, 48 )
direction = Vector2( 0, -1 )
spread = 15.0
gravity = Vector2( 0, 960 )
initial_velocity = 50.0
initial_velocity_random = 1.0
angular_velocity = 32.0
angular_velocity_random = 1.0
color_ramp = SubResource( 7 )
